--- a/src/styles/variaveis.scss
+++ b/src/styles/variaveis.scss
@@ -1,5 +1,11 @@
+//FONTES
 $fontPrincipal: "Montserrat", sans-serif;
 
+
+//BREAKPOINTS
+$md: "767px";
+
+//COLORS
 $blue: #276fbf;
 $red: #f72c25;
 $grey: #f6f4f3
