--- a/src/components/cadastro/styles.scss
+++ b/src/components/cadastro/styles.scss
@@ -1,5 +1,18 @@
+@use '../../styles/variaveis.scss';
+
 .cadastro {
-  padding: 60px;
-  border-left: 1px solid rgba(0, 0, 0, 0.062);
+  @media(max-width:variaveis.$md) {
+    padding: 0px;
+    width: 100% !important;
+  }
+  @media (min-width: variaveis.$md) {
+    border-left: 1px solid rgba(0, 0, 0, 0.062);
+    background-color: #f6f4f3;
+    width: 50%;
+  }
+
+  @media(min-width:1240px) {
+    padding: 60px;
+  }
 }
 
