--- a/src/components/gerenciarClientes/styles.scss
+++ b/src/components/gerenciarClientes/styles.scss
@@ -4,4 +4,9 @@ div.container-fluid {
   background-color: variaveis.$grey;
   padding: 30px;
   border-radius: 10px;
+
+  @media (max-width:767px) { 
+    padding: 8px;
+  }
+
 }
