--- a/src/components/tabelaClientes/styles.scss
+++ b/src/components/tabelaClientes/styles.scss
@@ -25,4 +25,25 @@ div.table-responsive {
       }
     }
   }
+
+  @media (max-width:variaveis.$md) {
+    max-height: 360px;
+
+    table.table {
+      thead {
+        tr th {
+          padding: 2px;
+        }
+      }
+  
+      tbody tr td {
+        padding:2px;
+  
+        &.checkbox {
+          text-align: center;
+        }
+      }
+    }
+  
+  }
 }
