--- a/src/components/tabelaClientes/styles.scss
+++ b/src/components/tabelaClientes/styles.scss
@@ -11,12 +11,10 @@ div.table-responsive {
   }
 
   table.table {
-    thead {
-      tr th {
+    thead tr th {
         padding: 16px 4px;
       }
-    }
-
+    
     tbody tr td {
       padding: 16px 4px;
 
@@ -30,10 +28,8 @@ div.table-responsive {
     max-height: 360px;
 
     table.table {
-      thead {
-        tr th {
+      thead tr th {
           padding: 2px;
-        }
       }
   
       tbody tr td {
